Add upload photo/video functional Add notification functional Fix booking functional

--- a/TravelSite/TravelSite/Views/Account/EditUser.cshtml
+++ b/TravelSite/TravelSite/Views/Account/EditUser.cshtml
@@ -49,7 +49,6 @@
 						<lable for="user" class="tag-margin">@Model.Roles[i].Name</lable>
 						@Html.HiddenFor(model => model.Roles[i].Id)
 						@Html.HiddenFor(model => model.Roles[i].Name)
-						
 					}
 				</p>
 			}
@@ -90,7 +89,7 @@
 		</div>
 	</div>
 	<div>
-		<input class="btn btn-primary" type="submit" value="Сохранить" />
+		<input class="btn btn-success" type="submit" value="Сохранить" />
 	</div>
 </form>
 <script>
