--- a/TravelSite/TravelSite/Views/Travel/TravelPage.cshtml
+++ b/TravelSite/TravelSite/Views/Travel/TravelPage.cshtml
@@ -7,12 +7,9 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
-
-<div class="mb-1 justify-content-center" style="display:grid; justify-self:center">
+<div class="mb-5 justify-content-center" style="display:grid; justify-self:center">
 	<div>
 		<label class="fs-5 mb-1 fw-bolder" style="display:grid; justify-self:center">@Model.Name</label>
 	</div>
@@ -24,7 +21,7 @@
 	</div>
 	@if (Model.PhotoGallery.Count > 0)
 	{
-		<div class="swiper" style="border-radius:20px; width:800px;height:auto; align-items:center">
+		<div class="swiper mb-2  " style="border-radius:20px; width:800px; height:auto; align-items:center">
 			<div class="swiper-wrapper" style="border-radius:10px;">
 				@foreach (var photo in Model.PhotoGallery)
 				{
@@ -38,11 +35,22 @@
 			<div class="swiper-button-prev" style="color:#7c858f"></div>
 		</div>
 	}
-	@if (!String.IsNullOrEmpty(Model.Video))
+	else 
 	{
-		<iframe src="@Model.Video" style="display:grid; justify-self:center; border-radius:20px; aspect-ratio: 16/9; width: 800px; height:auto"
-				allow="autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media"
-				data-testid="embed-iframe" frameborder="0" scrolling="no" allowfullscreen></iframe>
+		<div class="text-center">
+			<img style="align-content:center; border-radius:5px" width="50%" height="auto" src="@Model.Photo" />
+		</div>
+	}
+	@if (Model.VideoList.Count > 0)
+	{
+		<div class="mb-2">
+			@foreach (var video in Model.VideoList)
+			{
+				<div style="border-radius:20px; width:800px; height:auto; align-items:center">
+					<video controls src="@video.Name" alt="Gallery image" style="border-radius:20px; width:800px; height:auto; align-items:center" />
+				</div>
+			}
+		</div>
 	}
 	<div style="display:inline-block; justify-self:center">
 		@if (User.IsInRole("Admin"))
@@ -50,13 +58,13 @@
 
 			<form method="post" class="d-inline" asp-area="" asp-route-id="@Model.Id" asp-controller="Travel" asp-action="EditTravel">
 				<input asp-for="Id" hidden />
-				<button class="btn btn-primary m-1" type="submit">
+				<button class="btn btn-success m-1" type="submit">
 					Редактировать
 				</button>
 			</form>
 			<form method=post class="d-inline" asp-area="" asp-route-id="@Model.Id" asp-controller="Travel" asp-action="DeleteTravel">
 				<input asp-for="Id" hidden />
-				<button class="btn btn-primary m-1" type="submit">
+				<button class="btn btn-success m-1" type="submit">
 					Удалить
 				</button>
 			</form>
@@ -64,7 +72,7 @@
 		}
 		<form method="post" class="d-inline" asp-area="" asp-route-id="@Model.Id" asp-controller="Booking" asp-action="PrepareAddBooking">
 			<input asp-for="Id" hidden />
-			<button class="btn btn-primary m-1" type="submit">
+			<button class="btn btn-success m-1" type="submit">
 				Забронировать
 			</button>
 		</form>
