--- a/TravelSite/TravelSite/Views/TravelDates/EditTravelDates.cshtml
+++ b/TravelSite/TravelSite/Views/TravelDates/EditTravelDates.cshtml
@@ -20,16 +20,6 @@
 			<input asp-for="Id" class="form-control" hidden />
 		</div>
 		<div class="mb-3">
-			<label class="text-dark-emphasis">Дата отправления</label>
-			<input asp-for="From" class="form-control" style="max-width:fit-content" type="date" />
-			<span asp-validation-for="From" class="text-danger"></span>
-		</div>
-		<div class="mb-3">
-			<label class="text-dark-emphasis">Дата возвращения</label>
-			<input asp-for="To" class="form-control" style="max-width:fit-content" type="date" />
-			<span asp-validation-for="To" class="text-danger"></span>
-		</div>
-		<div class="mb-3">
 			<label class="text-dark-emphasis">Количество дней</label>
 			<input asp-for="DaysCount" class="form-control" />
 			<span asp-validation-for="DaysCount" class="text-danger"></span>
@@ -49,8 +39,18 @@
 			<input asp-for="Price" class="form-control">
 			<span asp-validation-for="Price" class="text-danger"></span>
 		</div>
+		<div class="mb-3">
+			<label class="text-dark-emphasis">Дата отправления</label>
+			<input asp-for="From" class="form-control" style="max-width:fit-content" type="date" />
+			<span asp-validation-for="From" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
+			<label class="text-dark-emphasis">Дата возвращения</label>
+			<input asp-for="To" class="form-control" style="max-width:fit-content" type="date" />
+			<span asp-validation-for="To" class="text-danger"></span>
+		</div>
 	</div>
 	<div>
-		<input class="btn btn-primary" type="submit" value="Сохранить" />
+		<input class="btn btn-success" type="submit" value="Сохранить" />
 	</div>
 </form>
