--- a/TravelSite/TravelSite/Views/Account/LoginPage.cshtml
+++ b/TravelSite/TravelSite/Views/Account/LoginPage.cshtml
@@ -28,7 +28,7 @@
 			</label>
 		</div>
 		<div>
-			<input class="btn btn-primary" type="submit" value="Войти" />
+			<input class="btn btn-success" type="submit" value="Войти" />
 		</div>
 	</form>
 </div>
