--- a/TravelSite/TravelSite/Views/Order/AddOrder.cshtml
+++ b/TravelSite/TravelSite/Views/Order/AddOrder.cshtml
@@ -7,8 +7,6 @@
 
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 <form class="frm" method="post" asp-controller="Order" asp-action="AddOrder">
 	<div asp-validation-summary="ModelOnly"></div>
@@ -27,7 +25,7 @@
 			<label class="fs-5 mb-1 fw-bolder">Стоимость: @Model.TotalPrice</label>
 		</div>
 		<div>
-			<input class="btn btn-primary" type="submit" value="Оплатить" />
+			<input class="btn btn-success" type="submit" value="Оплатить" />
 		</div>
 	</div>
 </form>
