--- a/TravelSite/TravelSite/Views/Order/EditOrder.cshtml
+++ b/TravelSite/TravelSite/Views/Order/EditOrder.cshtml
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 	<div>
-		<input class="btn btn-primary" type="submit" value="Сохранить" />
+		<input class="btn btn-success" type="submit" value="Сохранить" />
 	</div>
 </form>
 
