--- a/TravelSite/TravelSite/Views/Order/OrderPage.cshtml
+++ b/TravelSite/TravelSite/Views/Order/OrderPage.cshtml
@@ -30,13 +30,13 @@
 	<div class="d-inline-block">
 		<form method="get" class="d-inline" asp-area="" asp-route-id="@Model.Id" asp-controller="Order" asp-action="EditOrder">
 			<input asp-for="Id" hidden />
-			<button class="btn btn-primary m-1" type="submit">
+			<button class="btn btn-success m-1" type="submit">
 				Редактировать
 			</button>
 		</form>
 		<form method=post class="d-inline" asp-area="" asp-route-id="@Model.Id" asp-controller="Order" asp-action="DeleteOrder">
 			<input asp-for="Id" hidden />
-			<button class="btn btn-primary m-1" type="submit">
+			<button class="btn btn-success m-1" type="submit">
 				Удалить
 			</button>
 		</form>
