--- a/TravelSite/TravelSite/Views/Travel/AddTravel.cshtml
+++ b/TravelSite/TravelSite/Views/Travel/AddTravel.cshtml
@@ -4,10 +4,10 @@
 }
 @model CreateTravelViewModel
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
 
 <label class="fs-5">Добавление тура</label>
 <form class="frm" method="post" asp-controller="Travel" asp-action="AddTravel" enctype="multipart/form-data">
@@ -26,29 +26,31 @@
 	</div>
 	<div>
 		<div class="mb-3">
-			<input asp-for="Description"  class="form-control" />
+			<input asp-for="Description" class="form-control" />
 			<span asp-validation-for="Description" class="text-danger"></span>
 		</div>
 	</div>
 	<div>
 		<div class="mb-3">
-			<input asp-for="Photo" class="form-control" />
+			<input asp-for="Photo" type="file" class="form-control" />
 			<span asp-validation-for="Photo" class="text-danger"></span>
 		</div>
 	</div>
 	<div>
 		<div class="mb-3">
-			<input asp-for="PhotoGallery" type="file" multiple class="form-control" />
+			<input asp-for="PhotoGallery" type="file" multiple class="form-control" data-val="true" />
+			<span asp-validation-for="PhotoGallery" class="text-danger"></span>
 		</div>
 	</div>
 	<div>
 		<div class="mb-3">
-			<input asp-for="Video" class="form-control" />
-			<span asp-validation-for="Video" class="text-danger"></span>
+			<input asp-for="VideoList" type="file" multiple class="form-control" data-val="true" />
+			<span asp-validation-for="VideoList" class="text-danger"></span>
 		</div>
 	</div>
+
 	<div>
-		<input  class="btn btn-primary" type="submit" value="Добавить" />
+		<input class="btn btn-success" type="submit" value="Добавить" />
 	</div>
 </form>
 <div>
@@ -56,8 +58,29 @@
 		<a class="" asp-area="" asp-controller="Travel" asp-action="GetAllTravels">Перейти к списку всех туров</a>
 	</label>
 </div>
-@section scripts {
-
-	<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+@section scripts
+{
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script>
 	<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+	<script>
+		jQuery.validator.unobtrusive.adapters.add('checkmaxfilecount', ['count'], function (options) {
+			options.rules['checkmaxfilecount'] =
+			{
+				count: options.params.count
+			};
+			if (options.message) {
+				options.messages['checkmaxfilecount'] = options.message;
+			}
+		});
+
+		jQuery.validator.addMethod('checkmaxfilecount', function (value, element, params) {
+			if (element.files.length <= params.count) {
+				return true;
+			}
+			return false;
+		});
+	</script>
 }
