--- a/TravelSite/TravelSite/Views/Travel/TravelList.cshtml
+++ b/TravelSite/TravelSite/Views/Travel/TravelList.cshtml
@@ -6,12 +6,10 @@
 
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 @if (Model.Count != 0)
 {
-	<div class="mb-5">
+	<div class="mb-5 w-75 m-auto">
 		<label class="fw-bold fs-5">Все туры</label>
 		@if (User.IsInRole("Admin"))
 		{
@@ -27,23 +25,26 @@
 				</a>
 				<div style="color:darkgray; align-content:start">@travel.Description</div>
 				<a class="text-decoration-none;color:darkgray; align-content:start" method=get asp-area="" asp-controller="Travel" asp-route-id="@travel.Id" asp-action="GetTravel">
-					<img style="align-content:center; border-radius:5px" src="@travel.Photo" width="280" height="150" />
+					<img style="align-content:center; border-radius:5px" src="@travel.Photo" width="100%" height="50%" />
 				</a>
 			</div>
 			@if (User.IsInRole("Admin"))
 			{
-				<form method="post" class="d-inline" asp-area="" asp-route-id="@travel.Id" asp-controller="Travel" asp-action="EditTravel">
-					<input asp-for="@travel.Id" hidden />
-					<button class="btn btn-primary m-1" type="submit">
-						Редактировать
-					</button>
-				</form>
-				<form method="post" class="d-inline" asp-area="" asp-route-id="@travel.Id" asp-controller="TravelDates" asp-action="AddTravelDates">
-					<input asp-for="@travel.Id" hidden />
-					<button class="btn btn-primary m-1" type="submit">
-						Добавить даты
-					</button>
-				</form>
+				<div class="text-center">
+					<form method="post" class="d-inline" asp-area="" asp-route-id="@travel.Id" asp-controller="Travel" asp-action="EditTravel">
+						<input asp-for="@travel.Id" hidden />
+						<button class="btn btn-success m-1" type="submit">
+							Редактировать
+						</button>
+					</form>
+					<form method="post" class="d-inline" asp-area="" asp-route-id="@travel.Id" asp-controller="TravelDates" asp-action="AddTravelDates">
+						<input asp-for="@travel" hidden />
+						<input asp-for="@travel.Id" hidden />
+						<button class="btn btn-success m-1" type="submit">
+							Добавить даты
+						</button>
+					</form>
+				</div>
 			}
 		}
 	</div>
