--- a/TravelSite/TravelSite/Views/TravelDates/AddTravelDates.cshtml
+++ b/TravelSite/TravelSite/Views/TravelDates/AddTravelDates.cshtml
@@ -5,14 +5,16 @@
 }
 @model CreateTravelDatesViewModel
 
-<script src="~/lib/moment/moment-with-locales.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap-datetimepicker.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script>
 
 <label class="fs-5">Добавление дат для тура @Model.Travel.Name</label>
 <form class="frm" method="post" asp-controller="TravelDates" asp-action="AddTravelDatesInDB">
@@ -62,7 +64,7 @@
 	</div>
 	<input asp-for="@Model.Travel.Id" hidden />
 	<div>
-		<input class="btn btn-primary" type="submit" value="Добавить" />
+		<input class="btn btn-success" type="submit" value="Добавить" />
 	</div>
 </form>
 <div>
