--- a/TravelSite/TravelSite/Views/TravelDates/TravelDatesPage.cshtml
+++ b/TravelSite/TravelSite/Views/TravelDates/TravelDatesPage.cshtml
@@ -23,7 +23,7 @@
 	</div>
 	<form method="post" class="d-inline" asp-area="" asp-route-id="@Model.Id" asp-controller="TravelDates" asp-action="EditTravelDates">
 		<input asp-for="Id" hidden />
-		<button class="btn btn-primary m-1" type="submit">
+		<button class="btn btn-success m-1" type="submit">
 			Редактировать
 		</button>
 	</form>
